--- a/webdev/styles.css
+++ b/webdev/styles.css
@@ -367,7 +367,6 @@ button:hover{
 
 .download-all-btw {
     display: flex;
-    padding: 0px 15px;
 }
 
 .download-all-btw-btw {
@@ -388,11 +387,54 @@ button:hover{
     background: #009CC2;
 }
 
+.footer-links {
+    display: flex;
+    align-items: center;
+    padding-top: 73px;
+    height: 19px;
+    width: 240px;
+}
+
+.footer-links p {
+    font-size: 14px;
+    cursor: pointer;
+}
+
+footer {
+    padding: 0px 160px;
+    height: 185px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    background: #000;
+}
+
+ .footer-links p:hover {
+    border-bottom: 1px solid #fff;
+}
 
 
+footer img {
+    width: 44px;
+    padding-top: 60px;
+    height: 44px;
+}
+    
+.footer-links-divider {
+    margin: 0px 20px;
+    border-right: unset;
+    height: 8px;
+    border: 1px solid #4E4E4E;
+}
 
-
-
+.footer-copyright {
+    display: flex;
+    justify-content: flex-end;
+    color: #818181;
+    font-size: 14px;
+    width: 240px;
+    padding-top: 73px;
+}
 
 
 
